@@ -145,4 +145,6 @@
     name="wildcard-media"
     directory="static" />
 
+  <!-- PrimaryFieldInfo -->
+  <adapter factory=".primary.PrimaryFieldInfo"/>
 </configure>
